# triangle-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
examples/: box.rs  delaunay.rs  gmt_m1_triangulation.rs
src/: lib.rs
triangle/: makefile  tribox.c
