[package]
name = "triangle-rs"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"


[build-dependencies]
cc = "1.0.66"

[dev-dependencies]
plotters = "0.3.0"
spade = "1.8.2"
complot = { git = "https://github.com/rconan/complot.git", branch = "main" }

[dependencies]
rayon = "1.5.0"
serde = { version = "1.0.118", features = ["derive"] }
