[package]
name = "triangle-rs"
version = "0.1.1"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"
license = "MIT"
description = "A Rust binder for the 2D mesh generator and Delaunay triangulator Triangle"
repository = "https://github.com/rconan/triangle-rs"
documentation = "https://docs.rs/triangle-rs"
readme = "README.md"
categories = ["algorithms", "mathematics", "science", "simulation"]


[build-dependencies]
cc = "1.0.66"

[dev-dependencies]
spade = "1.8.2"

[dependencies]
rayon = "1.5.0"
serde = { version = "1.0.118", features = ["derive"] }
serde-pickle = "0.6.2"
